--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,11 +18,10 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  margin-top: 20px;
+  padding-top: 20px;
   border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer img {
