--- a/componetns/Layout/MainNavigation/navigation.module.css
+++ b/componetns/Layout/MainNavigation/navigation.module.css
@@ -28,7 +28,7 @@
 .header a:hover,
 .header a:active,
 .header a.active {
-  color: var(--color-blue-200);
+  color: var( --color-primary-100);
 }
 
 @media (min-width: 768px) {
