--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ body {
 
   margin: 0;
   background-color: var(--color-grey-50);
-  color: #346aaf;
+  color: var(--color-blue-800);
   font-family: "Roboto", sans-serif;
 }
 
