--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto&family=Source+Sans+Pro:wght@300&display=swap");
 
+
 * {
   box-sizing: border-box;
 }
@@ -45,7 +46,9 @@ body {
   margin: 0;
   background-color: var(--color-grey-50);
   color: var(--color-blue-800);
-  font-family: "Roboto", sans-serif;
+  height: 100%;
+  width: 100%;
+  font-family: 'Montserrat', 'Helvetica' !important;
 }
 
 h1,
