--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -28,12 +28,14 @@
 
 
 .left-side {
+    margin-top: 10vh;
     color: black;
     text-align: left;
   }
 
 .fadein {
     opacity: 0;
+
     @include animation(fadein 2s);
     @include animation-fill-mode(forwards);
   }
