--- a/componetns/Hero /hero.module.css
+++ b/componetns/Hero /hero.module.css
@@ -14,12 +14,12 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #cbffdc !important;
+  transition: color 0.5s ease !important;
 }
 
 .quote:hover {
   color: white !important;
-  font-size: 2rem;
-  transition: background-color 0.5s ease !important;
+  font-size: 1.5rem;
 }
 
 .image {
