--- a/componetns/Hero /hero.module.css
+++ b/componetns/Hero /hero.module.css
@@ -1,12 +1,13 @@
 
 .hero {
   text-align: center;
-  background-image: linear-gradient(
-    to bottom,
-    var(--color-blue-900),
-    var(--color-blue-800)
-  );
   padding: var(--size-8) 0;
+  background-image: var(--color-blue-900);
+  background-image: linear-gradient(
+    to bottom right,
+    var(--color-blue-900),
+    #00bcf1
+  );
 }
 
 .quote{
