--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+html {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
   --color-grey-50: hsl(214, 55%, 96%);
   --color-blue-100: hsl(210, 10%, 90%);
@@ -47,6 +52,11 @@ body {
   background-color: var(--color-grey-50);
   color: var(--color-blue-800);
   font-family: "Quicksand", 'Montserrat', 'Helvetica' !important;
+  line-height: 1.5;
+  min-height: 100vh;
+  min-width: 300px;
+  overflow-x: hidden;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1,
@@ -67,7 +77,7 @@ button {
 .profile-image-hero {
   display: inline-block;
   margin: 0 0.5rem;
-
+  
   animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 3s; /* don't forget to set a duration! */
 }
@@ -75,4 +85,16 @@ button {
 .animate__animated.animate__fadeIn {
   --animate-duration: 3s;
   --animate-delay: 0.9s;
+}
+
+.wallpaper {
+  background-image: url("/assets/images/backgroud-images/miami.jpg");
+  background-position: center;
+  background-size: cover; 
+  opacity: 0.2;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1000;
 }
