--- a/componetns/Hero /hero.module.css
+++ b/componetns/Hero /hero.module.css
@@ -6,7 +6,7 @@
   background-image: linear-gradient(
     to bottom right,
     var(--color-blue-900),
-    #00bcf1
+    rgba(0, 188, 241, 0.4)
   );
 }
 
