--- a/componetns/Hero /hero.module.css
+++ b/componetns/Hero /hero.module.css
@@ -5,7 +5,7 @@
   background-image: var(--color-blue-900);
   background-image: linear-gradient(
     to bottom right,
-    var(--color-blue-900),
+    rgba(0, 102, 204, 0.8),
     rgba(0, 188, 241, 0.4)
   );
 }
