--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,16 +65,17 @@ h3 {
   font-family: "Oswald", "Roboto", sans-serif;
 }
 
-/* a {
-  text-decoration: important;
+a {
+  text-decoration:underline !important;
   color: white !important;
   transition: 0.3s color ease-in-out;
-} */
+}
 
-/* a:hover {
-  color: red; 
-  font-size: 2rem;
-} */
+a:hover {
+  color: red !important; 
+  text-decoration: none;
+  font-size: 1rem;
+}
 
 button {
   font: inherit;
