--- a/components/Shop/Shopui/Grid/Grid.module.css
+++ b/components/Shop/Shopui/Grid/Grid.module.css
@@ -19,3 +19,17 @@
     }
 }
 
+
+.layoutA {
+    & > *:nth-child(6n+1),
+    & > *:nth-child(6n+5){
+            @screen lg {
+                @apply col-span-2 row-span-2
+             }
+         }
+}
+
+.layoutB {
+    color: red;
+}
+
