removing fix grid

--- a/components/Shop/Shopui/Grid/Grid.module.css
+++ b/components/Shop/Shopui/Grid/Grid.module.css
@@ -10,8 +10,8 @@
 
     & > * {
         @apply row-span-1 overflow-hidden;
-        height: 500px;
-        max-height: 800px;
+        /* height: 500px;
+        max-height: 800px; */
 
         @screen lg {
             height: inherit;
