--- a/components/Shop/Product/ProductCard/ProductCard.module.css
+++ b/components/Shop/Product/ProductCard/ProductCard.module.css
@@ -1,6 +1,7 @@
 
 .productContainer {
-  @apply relative max-h-full;
+  @apply relative;
+  max-height: 100% !important;
 
   &:hover {
     & .productBG:before {
@@ -37,15 +38,14 @@
   @apply absolute top-0 left-0 z-20;
 
   & > * {
-    font-size: 2rem;
+    @apply lg:text-3xl md:text-3xl sm:text-sm;
     letter-spacing: 0.4px;
   }
 }
 
 
 .productTitle {
-  @apply font-bold bg-blue-600; 
-  line-height: 2.2em;
+  @apply font-bold bg-blue-600;
   margin: 3px 3px 3px 0px;
   padding: 5px;
   border-bottom-right-radius: 6px 6px;
