--- a/components/Layout/MainNavigation/navigation.module.css
+++ b/components/Layout/MainNavigation/navigation.module.css
@@ -41,3 +41,12 @@
     font-size: var(--size-4) !important;
   }
 }
+
+.icon {
+
+  @apply mr-6 cursor-pointer transition;
+
+  &:hover {
+   background: var( --color-primary-50) !important;
+ }
+}
