--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -60,3 +60,16 @@
     from { opacity: 0; }
     to   { opacity: 1; }
   }
+
+.link-css {
+  color: #346AAF !important;
+  transition: 0.3s color ease-in-out !important;
+}
+
+link-css:hover {
+  color: #fff !important; 
+  padding: 9px !important;
+  text-decoration:underline !important;
+  background-color: #78818E !important;
+  font-size: 2rem ;
+}
