--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,13 +73,13 @@ h3 {
 }
 
 a {
-  text-decoration:underline !important;
-  color: white !important;
+  text-decoration:underline;
+  color: white;
   transition: 0.3s color ease-in-out;
 }
 
 a:hover {
-  color: red !important; 
+  color: red; 
   text-decoration: none;
   font-size: 1rem;
 }
